# Ksed

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: rust.yml
ksed_website/: .gitignore  package-lock.json  package.json  tsconfig.json
ksed_website/app/: entry.client.tsx  root.tsx
ksed_website/app/routes/: _index.tsx  about.tsx  support.tsx  test.tsx
ksed_website/app/routes/style/: about.css  index.css
ksed_website/pages/: _App.tsx  _document.tsx  redirectRoute.module.css  redirectRoute.tsx  test.tsx
ksed_website/public/: global.css  globals.css
ksed_website/src/app/: globals.css  layout.tsx  page.css  page.tsx
src/: App.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  build.rs  example_file.txt  resource.rc  resource.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: FS.rs  data.rs  fs.rs  main.rs
src-tauri/src/FS/: decrypt.rs  encrypt.rs  loading.rs  saving.rs
src-tauri/src/d_vault_manifest/: d_vault.manifest  d_vault.rc
src-tauri/src/data/: auth.rs  json.rs
src-tauri/src/encryption/: encrypt.rs
src-tauri/src/fs/: commands.rs  encryption.rs  fake.rs  fs.rs  io.rs  loading.rs  utilities.rs
src/pages/: login.tsx
src/pages/internal_apps/: internal_app.tsx
src/pages/login/: loading.tsx  login.css  login.tsx  signup.tsx
src/pages/main_page/: Grid.tsx  Item.tsx  main_page.css  main_page.tsx  make_app.tsx
src/pages/main_page/internal_apps/: App.css  App.tsx  file_system.tsx  notification.css  notification.tsx
src/pages/main_page/internal_apps/apps/: file_system.css  file_system.tsx
(+13 files in other folders)
