[package]
name = "d_vault"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-close", "window-set-fullscreen"] }
serde = { version = "1", features = ["derive"] }
rust-crypto ="*"
serde_json = "1"
dirs = "*"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
