[package]
name = "Ksed"
version = "0.0.0"
description = "your hidden desktop in windows"
authors = ["ori raisfeld", "ariel elaski", "aviv segal"]
edition = "2021"
build = "build.rs"


[build-dependencies]
tauri-build = { version = "1", features = [] }
tauri-winres = "0.1"
embed-resource = "*"


[dependencies]
tauri = { version = "1", features = [ "dialog-open", "dialog-save", "window-close", "window-set-fullscreen"] }
serde = { version = "1", features = ["derive"] }
base64 = "*"
rust-crypto ="*"
serde_json = "1"
dirs = "*"
once_cell = "*"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
